# GlobalPlacement_huawei

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run_adaptec1.sh  run_adaptec2.sh  run_adaptec2_baseline.sh
docs/: paper_clustering_conventions.md
include/clustering/: ClusterCandidate.h  ClusterConnectivityModel.h  ClusterNet.h  ClusterNode.h  ClusterScoreEvaluator.h  DynamicClusterHypergraph.h  HierarchyLevel.h  ModifiedBestChoiceClusterer.h  PlacementHierarchy.h
include/db/: Cell.h  Net.h  Pin.h  PlacementDB.h  Row.h
include/density/: Bin.h  ExactBinGrid.h  ExactDensityEvaluator.h  ExactDensitySubgradient.h  PaperOverlapFunction.h
include/evaluator/: DensityEvaluator.h  HPWLEvaluator.h  ObjectiveEvaluator.h
include/geometry/: Box.h  Point.h
include/grid/: Bin.h  BinGrid.h
include/initializer/: InitialPlacer.h  QuadraticInitialPlacer.h  SimplePackingInitialPlacer.h
include/objective/: NonsmoothObjectiveEvaluator.h
include/optimizer/: GlobalPlacer.h  MoreauProximalSolver.h  SubgradientEvaluator.h
include/parser/: LimboBookshelfAdapter.h
include/solver/: CsrMatrix.h  PreconditionedConjugateGradient.h
include/utils/: Logger.h
include/wirelength/: ExactWirelengthSubgradient.h
result/: bin_grid_summary.txt  final_bin_grid_summary.txt
scripts/: run_adaptec1.sh
src/clustering/: ClusterScoreEvaluator.cpp  DynamicClusterHypergraph.cpp  ModifiedBestChoiceClusterer.cpp  PaperReferencedConnectivityModel.cpp  PlacementHierarchy.cpp
src/db/: PlacementDB.cpp
src/density/: ExactBinGrid.cpp  ExactDensityEvaluator.cpp  ExactDensitySubgradient.cpp  PaperOverlapFunction.cpp
src/evaluator/: DensityEvaluator.cpp  HPWLEvaluator.cpp  ObjectiveEvaluator.cpp
src/grid/: BinGrid.cpp
src/initializer/: QuadraticInitialPlacer.cpp  SimplePackingInitialPlacer.cpp
src/objective/: NonsmoothObjectiveEvaluator.cpp
src/optimizer/: GlobalPlacer.cpp  MoreauProximalSolver.cpp  SubgradientEvaluator.cpp
src/parser/: LimboBookshelfAdapter.cpp
src/solver/: CsrMatrix.cpp  PreconditionedConjugateGradient.cpp
src/utils/: Logger.cpp
src/wirelength/: ExactWirelengthSubgradient.cpp
testbench/ispd2005/test/: legal.pl
tests/: test_adaptec2_smoke.cpp  test_bin_grid.cpp  test_cluster_score_evaluator.cpp  test_density_evaluator.cpp  test_dynamic_cluster_hypergraph.cpp  test_exact_bin_grid.cpp  test_exact_density_evaluator.cpp  test_exact_density_subgradient.cpp  test_exact_wirelength_subgradient.cpp  test_global_placer.cpp  test_hpwl.cpp  test_logger.cpp  test_modified_best_choice_clusterer.cpp  test_moreau_proximal_solver.cpp  test_nonsmooth_objective.cpp  test_objective_evaluator.cpp  test_placement_db.cpp  test_placement_hierarchy.cpp  test_subgradient_evaluator.cpp
tools/: clustering_diagnostics.cpp  implementation_diagnostics.cpp
